<resources>
    <string name="app_name">InternPorject-Suitmedia</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="adduser_img">addUser_img</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="third_screen">Third Screen</string>
    <string name="choose_a_user">Choose a User</string>
</resources>